--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start:watch": "nodemon -e ts --exec \"yarn build && node build/main\""
   },
   "devDependencies": {
+    "@types/node": "^13.13.0",
     "@typescript-eslint/eslint-plugin": "^2.28.0",
     "@typescript-eslint/parser": "^2.28.0",
     "eslint": "^6.8.0",
