--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "src/main.ts",
   "license": "MIT",
   "scripts": {
+    "eslint:fix": "node_modules/.bin/eslint --fix ./src",
     "build": "tsc",
     "start": "tsc && node build/main",
     "start:watch": "nodemon -e ts --exec \"yarn build && node build/main\""
@@ -14,6 +15,7 @@
     "@typescript-eslint/parser": "^2.28.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-config-airbnb-typescript": "^7.2.1",
     "eslint-config-prettier": "^6.10.1",
     "eslint-import-resolver-typescript": "^2.0.0",
     "eslint-plugin-import": "^2.20.1",
